# LogChat

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1cada2bd4e38_initial_migration.py  768d14ebc22a_initial_migration.py  a81360ba52a3_increased_vector_dim.py
cli/: __main__.py
docs/architecture/: architecture.drawio
src/: __init__.py  app.py  logger.py  prompts.py  utils.py
src/database/: __init__.py  logchat_db.py  state_saver.py
src/database/master_data/: knowledge_inserter.py  logchat_user_manual.csv  meaction_pacing_and_management.csv  meaction_pacing_guide_clinicians.csv  meassociation_pacing_guide_patients.csv  solvecfs_patient_and_caregiver_resources.csv  test_user_inserter.py
src/database/models/: __init__.py  _base.py  log.py  thread.py  user.py
src/database/models/knowledge/: __init__.py  _base.py  knowledge.py
src/database/models/user_data/: __init__.py  _base.py  log.py  logchat_user.py  thread.py
src/node/: __init__.py  prompts.py  response_generator.py  task_manager.py  utils.py
src/nodes/: __init__.py  extractor.py  opener.py  planner.py  responder.py  summarizer.py
src/tools/: __init__.py  log_activity.py  log_symptom.py  retrieve_activity_level.py  retrieve_information.py  update_or_create_activity_log.py  update_or_create_consumption_log.py  update_or_create_experience_log.py  update_or_create_symptom_log.py  utils.py
tests/: eval.py  judge.py  plotter.py  prompts.py
tests/data/: eval_dataset.json
tests/simulator/: __init__.py  app.py  impersonator.py  utils.py
